--- a/gb/21/9/8/n13219775.md
+++ b/gb/21/9/8/n13219775.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pxeqnh3506/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pxeqnh3506/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pxeqnh3506/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】权贵子女玩金融 白手套楼起楼塌</h2>
-<a href="https://dqcg8pdekez1x.cloudfront.net/N1fraApmm"><img width="600" src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/pxeqnh3506/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1ot7p38i3wmt5.cloudfront.net/J6mraApmi"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年09月08日讯】前两天传出一个消息，中共证监会前主席助理张育军因病去世了，而张育军被指参与了2015年<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E8%82%A1%E7%81%BE.md#1">股灾</a>的黑幕交易，仍在被调查之中，也是从那场被称为“<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E6%94%BF%E5%8F%98.md#1">金融政变</a>”的2015年<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E8%82%A1%E7%81%BE.md#1">股灾</a>之后，<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>就一直在清洗金融资本领域。此外，赵薇事件仍在发酵，有大陆媒体近日传出一张陈年旧照，照片上的赵薇紧搂着曾庆红的弟弟曾庆淮。而赵薇的丈夫黄有龙也被扒出旧闻，被指是前深圳市委书记黄丽满的侄子。而曾庆红、黄丽满都是江泽民的亲信。或许目前的赵薇事件，将会引发一场政治风暴。</p>
-<p>同时，网上也在热传一段视频，里面一位大陆著名的财经作家提到，领导的孩子们都去做金融了，而掌握了金融也就掌握了一个国家的命脉。这些年，我们也确实看到中共权贵的子女大多进入了金融、资本领域，搅弄风云。而最近<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的一系列操作，也似乎都是想要守住不发生金融风险的底线。</p>
+	<p>【大纪元2021年09月08日讯】前两天传出一个消息，中共证监会前主席助理张育军因病去世了，而张育军被指参与了2015年<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%82%A1%E7%81%BE.md#1">股灾</a>的黑幕交易，仍在被调查之中，也是从那场被称为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E6%94%BF%E5%8F%98.md#1">金融政变</a>”的2015年<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%82%A1%E7%81%BE.md#1">股灾</a>之后，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>就一直在清洗金融资本领域。此外，赵薇事件仍在发酵，有大陆媒体近日传出一张陈年旧照，照片上的赵薇紧搂着曾庆红的弟弟曾庆淮。而赵薇的丈夫黄有龙也被扒出旧闻，被指是前深圳市委书记黄丽满的侄子。而曾庆红、黄丽满都是江泽民的亲信。或许目前的赵薇事件，将会引发一场政治风暴。</p>
+<p>同时，网上也在热传一段视频，里面一位大陆著名的财经作家提到，领导的孩子们都去做金融了，而掌握了金融也就掌握了一个国家的命脉。这些年，我们也确实看到中共权贵的子女大多进入了金融、资本领域，搅弄风云。而最近<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的一系列操作，也似乎都是想要守住不发生金融风险的底线。</p>
 <p>那么，中共领导的孩子为什么喜欢做金融？玩弄金融的背后唱的哪出戏？2015年股灾的余波未了，在习近平瞄准的金融资本背后，他的政治对手都是谁？尽管中共各派系内斗不止，但是他们却有着共同的最恐惧的事情，这到底又是什么？</p>
 <p>我们今天就来聊聊这些话题。</p>
-<p><a src=""></a><a href="https://dqcg8pdekez1x.cloudfront.net/N1fraApmm"><img width="600" src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/pxeqnh3506/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/ef08f8e0-b737-481f-b8ba-ff68994756da?r=16x9&amp;d=716" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a src=""></a><a href="https://d1ot7p38i3wmt5.cloudfront.net/J6mraApmi"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/ef08f8e0-b737-481f-b8ba-ff68994756da?r=16x9&amp;d=716" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>2015年的股灾</h2>
 <p>我们先说说张育军的情况。9月1日，大陆财新网报导，从多个渠道确认，仍在被调查中的58岁的张育军，因为患胰腺癌在近日离世。</p>
 <p>张育军在2012年担任中共证监会主席助理，分管基金和期货二部，之前，张育军先后担任过深交所和上交所的总经理。</p>
 <p>在2015年的大陆股灾期间，张育军被指暗中与中信证券勾结，透露中央救市的决策内幕，中信证券则借机进行内幕交易，获得巨大利益。中信证券高管还向境外机构泄露有关内幕，并和境外机构一起，洗劫中国股市。中共当局最终动用了数千亿人民币救市。2017年9月，张育军因涉嫌受贿被立案侦查，但至今没有公布调查结果。</p>
 <p>2015年的股灾，相信很多人还记得，当年6月中旬，A股突然暴跌。从6月15日到7月8日，仅17个交易日，沪指就暴跌了32%，市值蒸发20多万亿，将近50%的公司自动停牌。之后，中信证券作为中国最大的券商，投入巨额资金充当了“救市主力”的角色。</p>
 <p>但是，到了8月24日，A股又经历了“黑色星期一”，当天沪指重挫8.49%，创8年来最大单日跌幅。这两次股灾，导致大陆超过四千万股民遭受损失。</p>
-<p>中共内部知情人后来向外媒透露说，在2015年股灾中，中信证券和证监会参与做空股市，被称为“内鬼事件”，当局已经把股灾和“内鬼事件”定性为“<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E6%94%BF%E5%8F%98.md#1">金融政变</a>”，当时的中信证券副董事长刘乐飞是幕后操盘手之一。而在股灾中逆市大涨的股票，中国人寿、新华保险以及中信等，都和刘乐飞有着千丝万缕的关系。江泽民、曾庆红、刘云山家族等这些江派势力联手，企图利用金融危机引发政治危机。</p>
+<p>中共内部知情人后来向外媒透露说，在2015年股灾中，中信证券和证监会参与做空股市，被称为“内鬼事件”，当局已经把股灾和“内鬼事件”定性为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E6%94%BF%E5%8F%98.md#1">金融政变</a>”，当时的中信证券副董事长刘乐飞是幕后操盘手之一。而在股灾中逆市大涨的股票，中国人寿、新华保险以及中信等，都和刘乐飞有着千丝万缕的关系。江泽民、曾庆红、刘云山家族等这些江派势力联手，企图利用金融危机引发政治危机。</p>
 <p>截至2015年底，中信证券被调查的高管至少有13人。2016年11月，有港媒披露，刘乐飞当时被限制出境，被停职并要求交代问题。在2018年9月底，中共证监会前副主席姚刚，也因为受贿将近7,000万被判刑18年。</p>
 <p>从这场金融股灾也可以看到，通过搅动金融资本，中共各派可以发动一场足够杀伤力的政治斗争。</p>
 <h2>领导的孩子都去做金融了</h2>
@@ -35,9 +35,9 @@
 <p>同在光大集团任职的，还有前中共中纪委书记吴官正的儿子吴少华。吴少华现任光大集团总公司的执行董事、副总经理。</p>
 <p>当然还有很多领导的孩子在玩金融，比如，中共前政治局常委李长春的女儿李彤；中共前政治局常委吴邦国的女婿冯绍东；前国务院副总理曾培炎的儿子曾之杰；前总理朱镕基的儿子朱云来等等。</p>
 <p>不过，谁都比不了真正的资本大鳄——江泽民的孙子江志成。江志成毕业于美国哈佛大学经济系，后来在哥伦比亚大学拿到硕士学位，曾任职于美国华尔街金融机构高盛公司，之后在香港设立了博裕资本有限公司，后来又改名为博裕投资顾问有限公司。博裕在成立后的短短一年半，就成功拿下了两笔大生意——阿里巴巴和信达国际控股的上市。</p>
-<p>此外，蚂蚁集团是江志成后来的又一个大手笔，如果蚂蚁成功上市的话，那将是一场千亿级别的造富盛宴。之前有分析说，如果蚂蚁成功上市，<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E9%A9%AC%E4%BA%91.md#1">马云</a>将成为继明天集团创办人肖建华之后，“中共国”最大的“金融巨头”。</p>
+<p>此外，蚂蚁集团是江志成后来的又一个大手笔，如果蚂蚁成功上市的话，那将是一场千亿级别的造富盛宴。之前有分析说，如果蚂蚁成功上市，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A9%AC%E4%BA%91.md#1">马云</a>将成为继明天集团创办人肖建华之后，“中共国”最大的“金融巨头”。</p>
 <p>《华尔街日报》在今年2月份的报导中曾经披露，除了江泽民的孙子江志成之外，前中共政治局常委、全国政协主席贾庆林的女婿李伯潭，也是蚂蚁集团的秘密投资者。</p>
-<p>此外，<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E9%A9%AC%E4%BA%91.md#1">马云</a>的背后还牵涉中信资本和国开金融，涉及到刘云山、王震、陈云等人的儿子，这些人都是江派的重要成员。</p>
+<p>此外，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A9%AC%E4%BA%91.md#1">马云</a>的背后还牵涉中信资本和国开金融，涉及到刘云山、王震、陈云等人的儿子，这些人都是江派的重要成员。</p>
 <p>前面我们提到，2015年6月，在习近平反腐“打虎”的关键时刻，中国股市突发股灾，这被认为是江、曾发动的反习“金融政变”。从那时起，习近平就开始在金融领域发起强力反击，查处了一批“金融大鳄”，包括明天集团的创办人肖建华，安邦集团的董事长吴小晖，香港数字王国的实际控制人车峰，国家开发银行董事长胡怀邦，华信集团董事长叶简明，以及华融集团董事长赖小民等人。</p>
 <p>这些落马的“金融大鳄”都和江、曾家族存在复杂的利益关系。习自然会担心，如果蚂蚁金服上市，马云很可能成为江派在金融市场上圈钱的“白手套”。习近平清洗这些权势可谓“一箭双雕”，既要抢了他们的钱，还要灭了他们的权。所以，自2015年股灾后，习近平防范“金融风险”就成了他布局中的重中之重。</p>
 <h2>习近平担心金融政变</h2>
@@ -51,48 +51,48 @@
 撰文：财商经济研究所<br />
 剪辑：曲歌<br />
 监制：文静<br />
-<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
+<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
 <p>责任编辑：连书华</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/2/n13205829.md#1">【财商天下】李子柒报警 称资本真是好手段</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208754.md#1">【财商天下】多国央行“收水” 中国反其道而行</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/4/n13210934.md#1">【财商天下】北京调控过猛 楼市有大危机</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217782.md#1">【财商天下】北交所成立 黑天鹅来了</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/2/n13205829.md#1">【财商天下】李子柒报警 称资本真是好手段</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/3/n13208754.md#1">【财商天下】多国央行“收水” 中国反其道而行</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/4/n13210934.md#1">【财商天下】北京调控过猛 楼市有大危机</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/7/n13217782.md#1">【财商天下】北交所成立 黑天鹅来了</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/15/n11590692.md#1" target="_blank">林辉：一个曾给毛献花女孩对父亲的忏悔</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9771543.md#1" target="_blank">中共抹黑李洪志先生“敛财”真相</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232692.md#1" target="_blank">林辉：为延安贩卖鸦片的毒贩死前缘何喊冤？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/26/n13188418.md#1">古籍记载：瘟疫出现之前 疫鬼做标记</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220267.md#1">【有冇搞错】阿富汗自古就产恐怖主义</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220351.md#1">【秦鹏直播】武汉病毒所被曝曾改造蝙蝠病毒</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216700.md#1">【珍言真语】练乙铮：文革2.0恐波及香港</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216420.md#1">赵薇再遭官媒点名 20年资本布局曝光</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217017.md#1">【拍案惊奇】赵薇卷入习江斗？传李嘉诚公子或出事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217379.md#1">美军绝密无人机疑现身南海 为何无可匹敌</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217860.md#1">回顾赵薇当年有多红 网友挖出孙俪曾给她伴舞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218036.md#1">被指来自天王嫂训练营 郭富城妻哽咽首谈内情</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13215985.md#1">因台独言论遭FB禁言 台网红怒：文革蔓延到台湾</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/6/n13215231.md#1">怕成下个赵薇？谢霆锋认退加拿大国籍引热议</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219236.md#1">台网红486账号遭停权 脸书回应：涉及仇恨言论</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216262.md#1">空姐考考你：飞机上禁烟 为何设有烟灰缸？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218742.md#1">获救孤儿小象回野外 多年后带小孩去看恩人</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217337.md#1">台爆幼儿园群聚感染 3类儿童新冠重症风险高</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216037.md#1">澳洲琴鸟模仿婴儿哭声 如原音重现</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/4/n13210459.md#1">古人怎么洁牙护齿？牙刷是怎么来的？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pxeqnh3506/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pxeqnh3506/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/8/n13219775.htm">【财商天下】权贵子女玩金融 白手套楼起楼塌</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/8/n13219775.htm">【财商天下】权贵子女玩金融 白手套楼起楼塌</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219775.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pxeqnh3506/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pxeqnh3506/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/8/n13219775.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
